[package]
name = "garden_content_component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garden = { path = "../garden" }
garden_winit = { path = "../garden_winit" }
garden_content = { path = "../garden_content" }
garden_content_loading = { path = "../garden_content_loading" }