[package]
name = "garden_games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garden = { path = "../garden" }
garden_glutin = { path = "../garden_glutin" }
garden_winit = { path = "../garden_winit" }
winit = "0.27.5"

[dev-dependencies]
mockall = "0.11.3"