[package]
name = "garden_glutin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garden = { path = "../garden" }
garden_winit = { path = "../garden_winit" }
glutin = "0.30.1"
winit = "0.27.5"
glutin-winit = "0.2.1"
raw-window-handle = "0.5.0"

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"