[package]
name = "garden_glutin_example_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garden_glutin = { path = "../garden_glutin" }
garden_winit = { path = "../garden_winit" }
garden_games = { path = "../garden_games" }