[package]
name = "garden_glutin_example_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garden_games = { path = "../garden_games" }
garden_glutin = { path = "../garden_glutin" }
garden_json_component = { path = "../garden_json_component" }
garden_winit = { path = "../garden_winit" }
garden_content_component = { path = "../garden_content_component" }
garden_scenes_component = { path = "../garden_scenes_component" }