[package]
name = "garden_winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garden = { path = "../garden" }
garden_content = { path = "../garden_content" }
garden_games = { path = "../garden_games" }
winit = "0.27.5"

[dev-dependencies]
mockall = "0.11.3"